other/verify-vpa-target/.chainsaw-test/good.yaml
apiVersion: autoscaling.k8s.io/v1
kind: VerticalPodAutoscaler
metadata:
  name: good01
spec:
  targetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: busybox
  updatePolicy:
    updateMode: Auto
---
apiVersion: autoscaling.k8s.io/v1
kind: VerticalPodAutoscaler
metadata:
  name: good02
spec:
  targetRef:
    apiVersion: apps/v1
    kind: DaemonSet
    name: ds-busybox
  updatePolicy:
    updateMode: Auto
---
apiVersion: autoscaling.k8s.io/v1
kind: VerticalPodAutoscaler
metadata:
  name: good03
spec:
  targetRef:
    apiVersion: apps/v1
    kind: StatefulSet
    name: ss-busybox
  updatePolicy:
    updateMode: Auto
---
