other/verify-vpa-target/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-vpa-target
status:
  ready: true
