other/verify-vpa-target/.chainsaw-test/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: verify-vpa-target
spec:
  steps:
  - name: 01 - Create policy and Enforce
    try:
    - apply:
        file: ../verify-vpa-target.yaml
    - patch:
        resource:
          apiVersion: kyverno.io/v1
          kind: ClusterPolicy
          metadata:
            name: verify-vpa-target
          spec:
            validationFailureAction: Enforce
    - assert:
        file: policy-ready.yaml
  - name: 02 - Create the prerequisite Pod controllers
    try:
    - apply:
        file: prereq.yaml
  - name: 03 - Try to create bad VPAs
    try:
    - apply:
        file: bad.yaml
        expect:
        - check:
            ($error != null): true
  - name: 04 - Create good VPAs
    try:
    - apply:
        file: good.yaml
